# thorp

./: .gitignore  CLAUDE.md  HANDOFF-TO-FABLE.md  Makefile  README.md  pyproject.toml
config/: collector.example.toml  odds.example.toml  recorder.example.toml  tracker.example.toml
deploy/: README.md  collector-run.sh  install-collector.sh  install-tracker.sh  thorp-stack.sh  tracker-run.sh
docs/: 00-executive-summary.md  01-research-report.md  02-business-plan.md  03-system-architecture.md  04-risk-safety-design.md  05-data-capture-design.md  06-test-plan.md  07-execution-roadmap.md  08-open-questions.md  09-delegation-log.md  10-adr-set.md  11-execution-analytics.md  12-build-log.md  13-line-movement-signals.md  14-pinnacle-scraper-collector.md  15-execution-microstructure.md  16-price-discovery-sim-and-research.md  17-polymarket-us-onboarding.md
research/: README.md
research/lead_lag/: study.py
secrets/: README.md  kalshi.env.example  odds.env.example  polymarket.env.example
src/thorp/: __init__.py
src/thorp/board/: __main__.py  dashboard.py  model.py  (+2 more)
tests/: test_auth.py  test_auth_loading.py  test_board.py  test_capture_integration.py  test_clock.py  test_collector.py  test_config.py  test_engine_sim.py  test_espn.py  test_journal.py  test_leadlag.py  test_logging_setup.py  test_monitor.py  test_normalize.py  test_odds.py  test_oms.py  test_pinnacle.py  test_polymarket_matching.py  test_polymarket_public.py  test_rest.py  test_risk.py  test_secrets.py  test_seq.py  test_sim.py  test_spread_total.py  test_stream.py  test_tracker.py  test_watchdog.py
(+70 files in other folders)
