[project]
name = "thorp"
version = "0.1.0"
description = "Solo-operator algorithmic trading system for Kalshi sports contracts (design in docs/)"
requires-python = ">=3.12"
dependencies = [
    "websockets>=14.0",
    "httpx>=0.27",
    "cryptography>=43.0",
    "pydantic>=2.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.112",
    "mypy>=1.11",
    "ruff>=0.6",
    "coverage[toml]>=7.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thorp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["thorp"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# dashboard.py is a single inline HTML/CSS/JS string literal; line length in the
# embedded markup is not meaningful Python style.
"src/thorp/monitor/dashboard.py" = ["E501"]

[tool.coverage.run]
branch = true
source = ["thorp"]
